--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         color: coral;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size: 48px;
+        padding:1px;
 
     }
 
