--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         color: coral;
 
     }
+    p{
+        padding:1px;
+        justify-content:center;
+    }
 
     body .textcontainer {
         display: flex;
