--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 
 
     <h2 class="textcontainer1"> Characteristics of Rabbits</h2>
+    <div>
     <ul>
         <li>Rabbits are small, furry mammals with long ears, short fluffy tails, and strong, large hind legs. They have
             2 pairs of sharp incisors (front teeth), one pair on top and one pair on the bottom.
@@ -153,6 +154,7 @@
             or six. </li>
 
     </ul>
+        </div>
 
 
 
