--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 
 
     <h2 class="textcontainer1"> Characteristics of Rabbits</h2>
+    
     <div>
     <ul>
         <li>Rabbits are small, furry mammals with long ears, short fluffy tails, and strong, large hind legs. They have
@@ -159,12 +160,13 @@
 
 
 
-
+<div>
    
         <a class="particletext fire" href="http://dubila.tekcitadel.com/">About Us</a>
         <a class="particletext fire" href="http://tekcitadel.com/">Visit Us</a>
         <a class="particletext fire" href="http://dubila.tekcitadel.com/">More</a>
         <a class="particletext fire" href="">Exit</a>
+    </div>
 
 
  
