--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 
 
-<div>
+<div class="textcontainer">
    
         <a class="particletext fire" href="http://dubila.tekcitadel.com/">About Us</a>
         <a class="particletext fire" href="http://tekcitadel.com/">Visit Us</a>
